# pet-ds

./: .gitignore  AI.py  README.md  config.ini  main.py  pyproject.toml  run.bat
pet_ds/: AI.py  api.py  config.ini  config.py  config.yml  main.py  models.py  settings.py  settings.ui
pet_ds/mcp/: client.py
pet_ds/mcp/server/: run.bat  weather.py
